# MBSI-Studio

./: .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt
.cursor/: instructions.md
app/: safe_streamlit_app.py  streamlit_app.py  style.css
docs/: DEPLOYMENT.md  MBSI_AISTUDIO_INTEGRATION.md  MBSI_API_MILESTONE1.md  MBSI_STUDIO_OVERVIEW.md  MBSI_UI_SPEC_MILESTONE1.md  MILESTONE_1_VISIUM_XENIUM_REAL_DATA.md  RESEARCH_MODULES.md  USER_GUIDE.md
mbsi/: __init__.py  guardrails.py  pipeline.py  utils.py
outputs/: ml_learning_feedback.jsonl  ml_learning_runs.jsonl
scripts/: _generate_pages.py  check_streamlit_pages.py  export_figures.py  run_advanced_demo.py  run_api.sh  run_benchmark.py  run_benchmark_demo.py  run_demo.py  run_full_pipeline.py  run_svg_detection.py  run_validation.py  smoke_test_dashboard_demo.py  smoke_test_discovery_engine.py  smoke_test_launch_imports.py  smoke_test_platform.py  smoke_test_ui.py  smoke_test_ui_imports.py  start_ui.sh  ui_screenshot_checklist.py
tests/: test_advanced_demo.py  test_advanced_spatial_demo.py  test_analysis_clustering.py  test_analysis_pipeline.py  test_analysis_preprocessing.py  test_analysis_qc.py  test_api_contracts.py  test_api_entrypoint.py  test_archive_inspector.py  test_baseline_unet_pipeline.py  test_benchmark_adapters.py  test_benchmark_hub.py  test_benchmark_metrics.py  test_biomarker_report.py  test_biopharma_discovery.py  test_boundaries.py  test_causal.py  test_communication.py  test_communication_intelligence.py  test_communication_ligand_receptor.py  test_communication_pipeline.py  test_communication_sender_receiver.py  test_conditional_drawer.py  test_confidence_engine.py  test_copilot.py  test_copilot_modules.py  test_dashboard_demo.py  test_developer_mode.py  test_diffusion_tensor.py  test_digital_twin.py  test_discovery_graph.py  (+82 more)
(+390 files in other folders)
